deploy/k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcskin
  namespace: mcskin-migration
spec:
  selector:
    app.kubernetes.io/name: mcskin
  ports:
    - name: http
      port: 80
      targetPort: http
